--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -13,10 +13,10 @@
   </ion-item>
   <ion-item>
     <ion-label position="stacked">Introduzca una ID</ion-label>
-    <ion-input type="text" [(ngModel)]="idRoom" placeholder="idRoom"></ion-input>
+    <ion-input type="text" [(ngModel)]="room" placeholder="idRoom"></ion-input>
   </ion-item>
 
   <br />
 
-  <div text-center><ion-button expand="block" (click)="joinChat()" [disabled]="nickname === '' && idRoom === ''">Unirse a la sala</ion-button></div>
+  <div text-center><ion-button expand="block" (click)="joinChat()" [disabled]="nickname === '' || room === ''">Crear o unirse a la sala</ion-button></div>
 </ion-content>
