--- a/src/app/chat-room/chat-room.page.html
+++ b/src/app/chat-room/chat-room.page.html
@@ -1,22 +1,12 @@
 <ion-header>
   <ion-toolbar>
     <ion-row class="message_row">
-      <ion-col size="6">
+      <ion-col size="10">
         <ion-title>chatRoom</ion-title>
       </ion-col>
       <ion-col size="2">
         <ion-button clear (click)="createPeer()">
           <ion-icon name="wifi"></ion-icon>
-        </ion-button>
-      </ion-col>
-      <ion-col size="2">
-        <ion-button clear (click)="createVideo()">
-          <ion-icon name="videocam"></ion-icon>
-        </ion-button>
-      </ion-col>
-      <ion-col size="2">
-        <ion-button clear (click)="createCall()">
-          <ion-icon name="call"></ion-icon>
         </ion-button>
       </ion-col>
     </ion-row>
@@ -31,7 +21,7 @@
         <ion-col size="9" offset="3" class="message" [ngClass]="'message my_message'">
           <div *ngIf="message.isImage; else noImage">
             <span class="user_name">{{ message.from }}:</span><br>
-            <img src="{{ message.text }}" /><br>
+            <img click=(openImage(message.text)) src="{{ message.text }}" /><br>
             <div class="time">{{message.created | date:'dd.MM hh:MM'}}</div>
           </div>
           <ng-template #noImage>
@@ -58,7 +48,7 @@
         <ion-col size="9" class="message" [ngClass]="'message other_message'">
           <div *ngIf="message.isImage; else noImage">
             <span class="user_name">{{ message.from }}:</span><br>
-            <img src="{{ message.text }}" /><br>
+            <img click=(openImage(message.text)) src="{{ message.text }}" /><br>
             <div class="time">{{message.created | date:'dd.MM hh:MM'}}</div>
           </div>
           <ng-template #noImage>
