--- a/src/app/chat-room/chat-room.page.html
+++ b/src/app/chat-room/chat-room.page.html
@@ -21,7 +21,7 @@
         <ion-col size="9" offset="3" class="message" [ngClass]="'message my_message'">
           <div *ngIf="message.isImage; else noImage">
             <span class="user_name">{{ message.from }}:</span><br>
-            <img click=(openImage(message.text)) src="{{ message.text }}" /><br>
+            <img click="(openImage(message.text))" src="{{ message.text }}" /><br>
             <div class="time">{{message.created | date:'dd.MM hh:MM'}}</div>
           </div>
           <ng-template #noImage>
@@ -35,7 +35,7 @@
               <!-- El nombre del archivo -->
               <div class="time">{{message.created | date:'dd.MM hh:MM'}}</div>
             </div>
-            <ng-template #noFile ng-click="pressText(message.text)">
+            <ng-template #noFile>
               <span class="user_name">{{ message.from }}:</span><br>
               <span>{{ message.text }}</span><br>
               <div class="time">{{message.created | date:'dd.MM hh:MM'}}</div>
@@ -48,7 +48,7 @@
         <ion-col size="9" class="message" [ngClass]="'message other_message'">
           <div *ngIf="message.isImage; else noImage">
             <span class="user_name">{{ message.from }}:</span><br>
-            <img click=(openImage(message.text)) src="{{ message.text }}" /><br>
+            <img click="(openImage(message.text))" src="{{ message.text }}" /><br>
             <div class="time">{{message.created | date:'dd.MM hh:MM'}}</div>
           </div>
           <ng-template #noImage>
@@ -62,7 +62,7 @@
               <!-- El nombre del archivo -->
               <div class="time">{{message.created | date:'dd.MM hh:MM'}}</div>
             </div>
-            <ng-template #noFile ng-click="pressText(message.text)">
+            <ng-template #noFile>
               <span class="user_name">{{ message.from }}:</span><br>
               <span>{{ message.text }}</span><br>
               <div class="time">{{message.created | date:'dd.MM hh:MM'}}</div>
