--- a/src/app/chat-room/chat-room.page.html
+++ b/src/app/chat-room/chat-room.page.html
@@ -21,7 +21,7 @@
         <ion-col size="9" offset="3" class="message" [ngClass]="'message my_message'">
           <div *ngIf="message.isImage; else noImage">
             <span class="user_name">{{ message.from }}:</span><br>
-            <img click="(openImage(message.text))" src="{{ message.text }}" /><br>
+            <img src="{{ message.text }}" (click)="openImage(message.text)" /><br>
             <div class="time">{{message.created | date:'dd.MM hh:MM'}}</div>
           </div>
           <ng-template #noImage>
@@ -37,7 +37,7 @@
             </div>
             <ng-template #noFile>
               <span class="user_name">{{ message.from }}:</span><br>
-              <span>{{ message.text }}</span><br>
+              <span (click)="pressText(message.text)">{{ message.text }}</span><br>
               <div class="time">{{message.created | date:'dd.MM hh:MM'}}</div>
             </ng-template>
           </ng-template>
@@ -48,7 +48,7 @@
         <ion-col size="9" class="message" [ngClass]="'message other_message'">
           <div *ngIf="message.isImage; else noImage">
             <span class="user_name">{{ message.from }}:</span><br>
-            <img click="(openImage(message.text))" src="{{ message.text }}" /><br>
+            <img src="{{ message.text }}" (click)="openImage(message.text)" /><br>
             <div class="time">{{message.created | date:'dd.MM hh:MM'}}</div>
           </div>
           <ng-template #noImage>
@@ -64,7 +64,7 @@
             </div>
             <ng-template #noFile>
               <span class="user_name">{{ message.from }}:</span><br>
-              <span>{{ message.text }}</span><br>
+              <span (click)="pressText(message.text)" >{{ message.text }}</span><br>
               <div class="time">{{message.created | date:'dd.MM hh:MM'}}</div>
             </ng-template>
           </ng-template>
